# dune

etc/auv/: BUVFollow.ini  BUVGoToDepth.ini  BUVGoToPoint.ini
programs/tests/: test_IMC.cpp
src/Control/AUV/BUVControlLib/: CMakeLists.txt
src/Control/AUV/BUVControlLib/include/BUVControl/: BUVControl.hpp
src/Control/AUV/BUVControlLib/src/: BUVControl.cpp
src/Control/AUV/Follow/: Task.cpp
src/Control/AUV/GoToDepth/: Task.cpp
src/Control/AUV/GoToPoint/: Task.cmake  Task.cpp
src/DUNE/IMC/: Bitfields.hpp  Blob.cpp  Constants.hpp  Definitions.cpp  Definitions.hpp  Enumerations.hpp  Factory.def  Header.hpp  Macros.hpp  SuperTypes.hpp
src/Simulators/BUV_Sim/: Task.cmake  Task.cpp
src/Simulators/BUV_Sim/BUVSimLib/: CMakeLists.txt
src/Simulators/BUV_Sim/BUVSimLib/include/BUVSim/: BUVSim.hpp
src/Simulators/BUV_Sim/BUVSimLib/src/: BUVSim.cpp
src/Simulators/BUV_Sim/BUVSimLib/test/: BUVSimTest.cpp  CMakeLists.txt
